--- a/gallery.css
+++ b/gallery.css
@@ -44,7 +44,8 @@ html {
     
     text-align: justify;
     padding: 0.5rem;
-    
+    display: none;
+       
     
   }
 
@@ -117,6 +118,7 @@ html {
 
   article {
     border: thin solid burlywood;
+    display: none;
     text-align: justify;
     margin: 1.5px;
     padding: 2px;
